--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <script src="app.js"></script>
 </head>
 <body>
+    <div class="flags-left"></div>
     <div class="grid">
-        
+
     </div>
+    <div class="result"></div>
 </body>
 </html>
